# ChangeLog for sys-apps/schedule
# Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

*starter-0.15 (08 Aug 2014)

  08 Aug 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild. Add recommendations for encryption

*starter-0.14 (02 Aug 2014)

  02 Aug 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*starter-0.13 (29 Jul 2014)

  29 Jul 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*starter-0.12 (27 Jul 2014)

  27 Jul 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*starter-0.11 (26 Jul 2014)

  26 Jul 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*starter-0.10 (25 Jul 2014)

  25 Jul 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*starter-0.9 (24 Jul 2014)

  24 Jul 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*starter-0.8 (19 Jul 2014)

  20 Jul 2014; Martin Väth <martin@mvath.de>:
  List all dependencies

  19 Jul 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*starter-0.7 (18 Jul 2014)

  18 Jul 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*starter-0.6 (17 Jul 2014)

  17 Jul 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*starter-0.5 (16 Jul 2014)

  16 Jul 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*starter-0.4 (15 Jul 2014)

  15 Jul 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*starter-0.3 (14 Jul 2014)

  14 Jul 2014; Martin Väth <martin@mvath.de>:
  Version bump, remove old ebuild

*starter-0.1 (13 Jul 2014)

  13 Jul 2014; Martin Väth <martin@mvath.de>:
  New ebuild from scratch