@@ -1,1 +1,1 @@
-DIST schedule-0.15.tar.gz 23398 SHA256 2233d4af8d11706e4a13b74e677b7b4f39a9fa28d8414f70e64a101fcb187b3d SHA512 e05818329df17b346c91bbfb6790c3029499ca61af7c7d9c298dca5b69b94ae5fd92509b58caf15e8c7782a4041acd49f4adabc7f43d8dc64227364353a82151 WHIRLPOOL ab94142ba60dc0257e89319f4c85bf31c66ded645b5a7e62b3b13b08764564f2abc6536dedbb63a2999cb612f2b2d4e1b019f5cad57b74ed693e974b10bc9b67
+DIST schedule-1.0.tar.gz 23486 SHA256 4dd884dd931f0190dce543d7d5191168c9c29475611d9d20d0bfb03b38b55be9 SHA512 28cd86a61029c974defa221a5733532a6857b47875212a84469d10557e2ff3968220ff5bbbd9f7954016b0b9be1961b8e15334aa4ca1a684e0efd78b1c597e08 WHIRLPOOL c583b764e8855b58c363de71330c85305ce3af488372102b1bea097acca4c66547b9e318b3732c5f791c0b919deddddf54047c4c824c3df9a63253cc1bbe703b
