@@ -1,2 +1,2 @@
 DIST squashmount-6.3.tar.gz 42040 SHA256 84ddd130691f97ad7b422d8ea507ebdfa61704c8ec0e5e8348b4fa2edda9200e SHA512 f271dbc3ac0234da716aeeb523ee999f0efc0d3829188fad117c9fad5f5dd031e2a12282571ebbaeef2207a53a03572bd00be65169b02925e45ac34ea0e481bb WHIRLPOOL 3a7a63b6422b035f2b46a7e8bded94bb4e76a3125396c4d2e2bc402657b6f8ba086c0a926134695d5761aced55d2ff482aafa7c82980329a2752720cb27d0d7e
-DIST squashmount-7.10.tar.gz 45876 SHA256 6234b53437d1f6878d9aafc5b17b215fe862e36687b8d5980a60a87664e4ab32 SHA512 d902d9823a7c4f39e8df17d08d285be4286ae9f9408b596ada2acc26048fad2f8f17d3e726f9089ea1b28f18e940a51a6cea831e811ca752d3efdbdbdc9d91bc WHIRLPOOL ff03b394e28a801037a5088004bbd8e1639b9ae7dc18677b363e906ae1171bf61b0c1c16ea1b9aa690fe0f964c143e363c893578b46c5a09f9dab3fe9fec63e5
+DIST squashmount-7.11.tar.gz 45808 SHA256 829f9fdc584f86348ae07d9bcdb4a07e964466f61fe8773614a8dfbc22bfbc0a SHA512 3539603c9c6491885e2f985c5bf06745455d5754c3aa42168ae3f3ac1d8236a010ac350015edabc1308dec85409b4ff7bdef859ad36b92d70cbb3ec65f291f28 WHIRLPOOL 412da031e8b4eb11838d39d516025d94fa212320bd43120395edb3fb0f2d6f29b56542ab8b21eaf58485eec5ffb0c42e535bb7b55cc4161e18e36fd74fd934ee
