@@ -2,6 +2,11 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*squashmount-7.11 (09 Aug 2014)
+
+  09 Aug 2014; Martin Väth <martin@mvath.de>:
+  Version bump, remove old ebuild
+
 *squashmount-7.10 (30 Jul 2014)
 
   08 Aug 2014; Martin Väth <martin@mvath.de>:
