@@ -2,6 +2,11 @@
 # Copyright 1999-2014 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+*starter-1.0 (09 Aug 2014)
+
+  09 Aug 2014; Martin Väth <martin@mvath.de>:
+  Version bump, remove old ebuild. Strengthen encryption
+
 *starter-0.15 (08 Aug 2014)
 
   08 Aug 2014; Martin Väth <martin@mvath.de>:
